[build-system]
requires = ["setuptools>=68", 
            "setuptools_scm[toml]>=8"
            ]
build-backend = "setuptools.build_meta"

[project]
name = "mesh_persist"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "configparser",
    "meshtastic",
    "paho_mqtt",
    "psycopg2",
    "tox",
    "types-psycopg2",
]

[project.scripts]
mesh-persist = "mesh_persist.mesh_persist:main"

# Enables the usage of setuptools_scm
[tool.setuptools_scm]

[project.optional-dependencies]
lint = [
    "mypy",
    "ruff",
]
test = [
]
doc = [
]
build = [
    "build[virtualenv]==1.0.3",
]
dev = [
    "tox",
    "mesh_persist[lint]",
    "mesh_persist[test]",
    "mesh_persist[doc]",
    "mesh_persist[build]",
]

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = [
    "conf.py",
]
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = [
    "COM812",   # Conflicts with the formatter
    "ISC001",   # Conflicts with the formatter
    "ANN101",   # "missing-type-self"
    "ANN001",   # missing type annotations in function args
    "ARG002",   # Unused method argument
    "PT001",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT004",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT005",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT023",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PGH003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]
"docs/**" = [
    "INP001",   # Requires __init__.py but docs folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = false # Functions need to be annotated
warn_unused_ignores = true
namespace_packages = true
exclude = [
    "mesh_persist-\\d+", # Ignore temporary folder created by setuptools when building an sdist
    "venv.*/",
    "build/",
    "dist/",
]
